aside in progress

--- a/index.html
+++ b/index.html
@@ -3,10 +3,39 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://kit.fontawesome.com/c42bf76b68.js" crossorigin="anonymous"></script>
+        <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
         <title>Spotify Web</title>
     </head>
     <body>
-
+        <!-- ASIDE SPOTIFY -->
+        <aside class="spoti-aside">
+            <div id="logo">
+                <img src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_RGB_White.png" alt="logo">
+            </div>
+            <div class="navbar-first">
+                <ul>
+                    <li>
+                        <a href="home-link">
+                            <i class="fas fa-home"></i>
+                            <p>Home</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="search-link">
+                            <i class="fas fa-search"></i>
+                            <p>Cerca</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="library-link">
+                            <i class="fas fa-book"></i>
+                            <p>La tua libreria</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </aside>
     </body>
 </html>
