aside in progress (2)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://kit.fontawesome.com/c42bf76b68.js" crossorigin="anonymous"></script>
-        <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lato:400,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
         <title>Spotify Web</title>
     </head>
@@ -14,28 +14,53 @@
             <div id="logo">
                 <img src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_RGB_White.png" alt="logo">
             </div>
-            <div class="navbar-first">
+
+            <div class="navbar top">
                 <ul>
                     <li>
-                        <a href="home-link">
+                        <a href="#">
                             <i class="fas fa-home"></i>
                             <p>Home</p>
                         </a>
                     </li>
                     <li>
-                        <a href="search-link">
+                        <a href="#">
                             <i class="fas fa-search"></i>
                             <p>Cerca</p>
                         </a>
                     </li>
                     <li>
-                        <a href="library-link">
+                        <a href="#">
                             <i class="fas fa-book"></i>
                             <p>La tua libreria</p>
                         </a>
                     </li>
                 </ul>
             </div>
+
+            <div class="navbar middle">
+                <h4>Playlist</h4>
+                <ul>
+                    <li>
+                        <a id="crea" href="#">
+                            <i class="fas fa-plus-square"></i>
+                            <p>Crea Playlist</p>
+                        </a>
+                    </li>
+                    <li><a href="#">Nome Playlist</a></li>
+                    <li><a href="#">Nome Playlist</a></li>
+                    <li><a href="#">Nome Playlist</a></li>
+                    <li><a href="#">Nome Playlist</a></li>
+                    <li><a href="#">Nome Playlist</a></li>
+                    <li><a href="#">Nome Playlist</a></li>
+                    <li><a href="#">Nome Playlist</a></li>
+                </ul>
+            </div>
+
+            <div class="navbar bottom">
+                
+            </div>
+
         </aside>
     </body>
 </html>
