main in progress (avvio)

--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
                     <button type="button" name="button">Effettua l'upgrade</button>
                 </div>
             </header>
+
+            <!-- MAIN SPOTIFY -->
+            <main>
+                <div class="container music">
+                    
+                </div>
+            </main>
         </div>
     </body>
 </html>
