main (in progress)

--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
                     <div class="navbar bottom">
                         <div class="install">
                             <a href="#">
-                            <i class="fas fa-arrow-circle-down"></i>
+                            <i id="hide-element" class="fas fa-arrow-circle-down"></i>
                             <small id="hide-element">Installa app</small>
                             </a>
                         </div>
 
-                        <div class="user">
+                        <div id="hide-element" class="user">
                                 <a href="#">
                                     <img src="img/luca.jpg" alt="userlogo">
                                 </a>
-                            <p id="hide-element">Luca Cucchi</p>
+                            <p >Luca Cucchi</p>
                         </div>
                     </div>
                 </div>
@@ -153,7 +153,7 @@
                                 <div class="overlay"><i class="far fa-play-circle"></i></div>
                                 <img src="https://drblowfin.files.wordpress.com/2018/05/blind-guardian-e28093-nightfall-in-middle-earth-1998.jpg" alt="">
                             </div>
-                            <h5>Nighfall in Middle Earth</h5>
+                            <h5>Nightfall in Middle Earth</h5>
                             <small>Blind Guardian</small>
                         </div>
                         <div class="band-recenti-card">
@@ -173,12 +173,37 @@
 
                     <div class="album-consigliati">
                         <div class="consigliati-card">
-                                <img src="https://cdns-images.dzcdn.net/images/cover/0741ec10913f319314e556a57c0a5f5c-4501a7f1dbf4a81be60e1347ab6b6a6a-c5ef40f52e9c754427bbc21f79bc815c-1dc9d9f7cc402b375660c8b952a4bdb8/500x500.jpg" alt="">
-                                <h5>The Best of Blues</h5>
-                                <small>Variuos Artists</small>
-                            </div>
+                            <img src="https://img.discogs.com/uGe1WW9Lvcso7hJbtYkdfETX3ZQ=/fit-in/500x500/filters:strip_icc():format(jpeg):mode_rgb():quality(90)/discogs-images/R-6905834-1429217590-5908.jpeg.jpg" alt="">
+                            <h5>Live at the BBC</h5>
+                            <small>B.B.King</small>
+                        </div>
+
+                        <div class="consigliati-card">
+                            <img src="https://cdns-images.dzcdn.net/images/cover/0741ec10913f319314e556a57c0a5f5c-4501a7f1dbf4a81be60e1347ab6b6a6a-c5ef40f52e9c754427bbc21f79bc815c-1dc9d9f7cc402b375660c8b952a4bdb8/500x500.jpg" alt="">
+                            <h5>The Best of Blues</h5>
+                            <small>Variuos Artists</small>
                         </div>
                     </div>
+                    
+                    <div class="titolo-consigli">
+                        <h4>Creato per Luca Cucchi</h4>
+                        <p>Più ascolti, più accurati saranno i suggerimenti.</p>
+                    </div>
+
+                    <div class="album-consigliati">
+                        <div class="consigliati-card">
+                            <img src="https://img.discogs.com/uGe1WW9Lvcso7hJbtYkdfETX3ZQ=/fit-in/500x500/filters:strip_icc():format(jpeg):mode_rgb():quality(90)/discogs-images/R-6905834-1429217590-5908.jpeg.jpg" alt="">
+                            <h5>Live at the BBC</h5>
+                            <small>B.B.King</small>
+                        </div>
+
+                        <div class="consigliati-card">
+                            <img src="https://cdns-images.dzcdn.net/images/cover/0741ec10913f319314e556a57c0a5f5c-4501a7f1dbf4a81be60e1347ab6b6a6a-c5ef40f52e9c754427bbc21f79bc815c-1dc9d9f7cc402b375660c8b952a4bdb8/500x500.jpg" alt="">
+                            <h5>The Best of Blues</h5>
+                            <small>Variuos Artists</small>
+                        </div>
+                    </div>
+
                 </main>
             </div>
 
