fix nomi  playlist

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                                     <p id="hide-element">Crea Playlist</p>
                                 </a>
                             </li>
-                            <li><a id="hide-element" href="#">Nome Playlist</a></li>
-                            <li><a id="hide-element" href="#">Nome Playlist</a></li>
-                            <li><a id="hide-element" href="#">Nome Playlist</a></li>
-                            <li><a id="hide-element" href="#">Nome Playlist</a></li>
-                            <li><a id="hide-element" href="#">Nome Playlist</a></li>
-                            <li><a id="hide-element" href="#">Nome Playlist</a></li>
-                            <li><a id="hide-element" href="#">Nome Playlist</a></li>
+                            <li><a id="hide-element" href="#">Metallo Pesante</a></li>
+                            <li><a id="hide-element" href="#">Rock da cantina</a></li>
+                            <li><a id="hide-element" href="#">Prog Rock sommelier</a></li>
+                            <li><a id="hide-element" href="#">Jazz anti-stress</a></li>
+                            <li><a id="hide-element" href="#">Pop? cestinare!</a></li>
+                            <li><a id="hide-element" href="#">Rutto libero</a></li>
+                            <li><a id="hide-element" href="#">Vari e avariati</a></li>
                         </ul>
                     </div>
                 </div>
