--- a/index.html
+++ b/index.html
@@ -218,7 +218,31 @@
             </div>
 
         <footer>
+            <div class="footer-container">
+                <div class="footer-left">
+                    <img src="https://www.highresaudio.com/imgcache/6b257ad82f1a3ef8280ca8f1ae23ac14/9nuygg-rockrollst-preview-m3_550x550.jpg" alt="">
+                    <h6>Rock n' Roll Strategy</h6>
+                </div>
 
+                <div class="footer-middle">
+                    <div class="play-controls">
+                        <i class="fas fa-random"></i>
+                        <i class="fas fa-step-backward"></i>
+                        <i class="far fa-play-circle"></i>
+                        <i class="fas fa-step-forward"></i>
+                        <i class="fas fa-redo-alt"></i>
+                    </div>
+                        <audio controls>
+                             <source src="audio/strategy.mp3" type="audio/mpeg">
+                        </audio>
+                </div>
+
+                <div class="footer-right">
+                    <i class="fas fa-desktop"></i>
+                    <i class="far fa-user"></i>
+                    <i class="fas fa-bars"></i>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
