aggiunto transizione icone footer destra

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <div class="footer-container">
                 <div class="footer-left">
                     <img src="https://www.highresaudio.com/imgcache/6b257ad82f1a3ef8280ca8f1ae23ac14/9nuygg-rockrollst-preview-m3_550x550.jpg" alt="">
-                    <h6>Rock n' Roll Strategy</h6>
+                    <h6 id="hide-element">Rock n' Roll Strategy</h6>
                 </div>
 
                 <div class="footer-middle">
@@ -237,7 +237,7 @@
                         </audio>
                 </div>
 
-                <div class="footer-right">
+                <div id="hide-element" class="footer-right">
                     <i class="fas fa-desktop"></i>
                     <i class="far fa-user"></i>
                     <i class="fas fa-bars"></i>
