fix vari media queries

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 
                         <div id="hide-element" class="user">
                                 <a href="#">
-                                    <img src="img/luca.jpg" alt="userlogo">
+                                    <img id="foto-me" src="img/luca.jpg" alt="userlogo">
                                 </a>
-                            <p >Luca Cucchi</p>
+                            <p id="hide-me">Luca Cucchi</p>
                         </div>
                     </div>
                 </div>
