fix su footer (2)

--- a/index.html
+++ b/index.html
@@ -222,7 +222,10 @@
             <div class="footer-container">
                 <div class="footer-left">
                     <img src="https://www.highresaudio.com/imgcache/6b257ad82f1a3ef8280ca8f1ae23ac14/9nuygg-rockrollst-preview-m3_550x550.jpg" alt="">
+                    <div class="nowplaying">
                     <h6 id="hide-element">Rock n' Roll Strategy</h6>
+                    <small id="hide-element">.38 Special</small>
+                    </div>
                 </div>
 
                 <div class="footer-middle">
